<?xml version="1.0" encoding="utf-8"?>

<!-- ============================================================= -->
<!-- Application: Reservation Roster -->
<!-- Activity:    ActMain -->
<!-- ============================================================= -->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActMain">

    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    <!-- ScrollView, main container of this layout -->
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <!-- ConstraintLayout, main container of the above scrollview -->
        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Label for the 'Simulation' text -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <TextView
                    android:text="@string/simulation_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblSimulation"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btnStart"
                    app:layout_constraintBaseline_toBaselineOf="@+id/btnStart"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Button to stop the simulation -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <Button
                    android:text="@string/stop_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStop"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:onClick="stopTimerTask"
                    android:background="@color/colorRedButton"
                    app:layout_constraintStart_toEndOf="@+id/btnStart"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/btnStart"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Button to start the simulation -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <Button
                    android:text="@string/start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStart"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:onClick="startTimerTask"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/colorGreenButton"
                    app:layout_constraintStart_toEndOf="@+id/lblSimulation"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btnStop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/listViewClientOrder"
                    app:layout_constraintVertical_chainStyle="spread_inside"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- ListView to display the reservations list (has nested scrolling activated) -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <ListView
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:id="@+id/listViewClientOrder"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginEnd="16dp"
                    android:layout_height="320dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/colorReservationlistView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/txtPartyName"
                    app:layout_constraintTop_toBottomOf="@+id/btnStart"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Label for the party name -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <TextView
                    android:text="@string/party_name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblPartyName"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintEnd_toStartOf="@+id/txtPartyName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txtPartyName"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- EditText to ask for the party name -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtPartyName"
                    android:hint="@string/party_name_hint"
                    android:layout_marginBottom="32dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtNbInParty"
                    app:layout_constraintBottom_toTopOf="@+id/txtNbInParty"
                    app:layout_constraintTop_toBottomOf="@+id/listViewClientOrder"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Label for the number of people in the party -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblNbInParty"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/nb_party_lbl"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/txtNbInParty"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txtNbInParty"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- EditText to ask for the number of people in the party -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNbInParty"
                    android:hint="@string/nb_party_hint"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintStart_toEndOf="@+id/lblNbInParty"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btnClear"
                    app:layout_constraintTop_toBottomOf="@+id/txtPartyName"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Button to confirm the reservation -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <Button
                    android:text="@string/reserve_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReserve"
                    android:textAllCaps="false"
                    android:onClick="makeReservation"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@color/colorGreenButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btnClear"
                    app:layout_constraintBaseline_toBaselineOf="@+id/btnClear"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Button to clear the text in the reservation EditTexts -->
            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <Button
                    android:text="@string/clear_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnClear"
                    android:textAllCaps="false"
                    android:layout_marginBottom="32dp"
                    android:onClick="clearReservation"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@color/colorRedButton"
                    app:layout_constraintTop_toBottomOf="@+id/txtNbInParty"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnReserve"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>